<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="boas_vindas">Descubra seu perfil de saúde e receba recomendações personalizadas.</string>
    <string name="comece_aqui">Comece aqui</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="ex_peso">70</string>
    <string name="altura_m">Altura (m)</string>
    <string name="ex_altura">1.70</string>
    <string name="idade">Idade</string>
    <string name="ex_idade">18</string>
    <string name="nome">Nome</string>
    <string name="ex_nome">Fulano</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="sexo">Sexo</string>
    <string name="nivel_de_atividade">Nível de Atividade</string>
    <string name="calcular_gasto_calorico">Calcular Gasto Calórico</string>
    <string name="voltar">Voltar</string>
    <string name="calcular_peso_ideal">Calcular Peso Ideal</string>
    <string name="resultado_gasto_calorico">Resultado do Gasto Calórico</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="mensagem_diferenca">Mensagem de diferença</string>
    <string name="voltar_inicio">Voltar ao Início</string>
    <string name="texto_convite">Preencha os dados e descubra seu plano fitness.</string>
    <string name="seu_resultado_imc">Resultado do seu IMC</string>
    <string name="seu_indice_de_massa_corporal">Seu Índice de Massa Corporal é:</string>
    <string name="categoria_saude">Categoria de Saúde:</string>
    <string name="icone_status_saude">Ícone de status de saúde</string>
    <string name="ola_usuario">Olá, %s!</string>
    <string name="msg_abaixo_peso">Abaixo do peso: IMC &lt; 18.5</string>
    <string name="msg_normal">Normal: IMC 18.5 – 24.9</string>
    <string name="msg_sobrepeso">Sobrepeso: IMC 25 – 29.9</string>
    <string name="msg_obesidade">Obesidade: IMC ≥ 30</string>
    <string name="msg_erro">Erro no cálculo. Verifique os dados.</string>
    <string name="gasto_calorico_diario_titulo">Gasto Calórico Diário</string>
    <string name="msg_gasto_personalizada">%s, seu gasto calórico diário é:</string>
    <string name="sua_taxa_metabolica_basal">Sua Taxa Metabólica Basal (TMB) é:</string>
    <string name="icone_gasto_calorico">Ícone de gasto calórico (chama).</string>
    <string name="seu_peso_ideal_e">Meta de Peso Ideal</string>
    <string name="meta_de_peso_calculada">Sua meta de peso ideal é:</string>
    <string name="receber_dicas">Gostaria de receber dicas de exercícios e alimentação?</string>
    <string name="seu_gasto_calorico_diario_total">Seu Gasto Calórico Diário Total:</string>
    <string name="resumo_saude">Resumo da Saúde</string>
    <string name="ver_resumo">Gerar Resumo</string>
    <string name="recomendacao">Recomendação de Ingestão de Água</string>
    <string name="historico_de_calculos">Histórico de Cálculos</string>
    <string name="novo_cadastro">Novo Cadastro</string>
    <string name="ver_historico">Ver Histórico</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="dd_mm_aaaa">DD-MM-AAAA</string>
    <string name="aaaa_mm_dd">AAAA-MM-DD</string>
    <string name="frequencia_card_max">Frequência Cardíaca Máxima</string>
    <string name="zona_de_treino">Sua zona de treino é:</string>

</resources>