<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F7"
    tools:context=".ui.PesoIdealActivity">

    <include
        layout="@layout/include_toolbar"
        android:id="@+id/toolbarTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="32dp"
        android:fillViewport="true"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbarTop"
        app:layout_constraintBottom_toTopOf="@id/toolbarBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="40dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resumo_saude"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvNomeResumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seu_indice_de_massa_corporal"
                android:textSize="16sp"
                android:textColor="#5A5A5A"/>

            <TextView
                android:id="@+id/tvIMCResumo"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:text="24.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria_saude"
                android:textSize="16sp"
                android:textColor="#5A5A5A"/>

            <TextView
                android:id="@+id/tvCategoriaResumo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                tools:text="Peso Normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meta_de_peso_calculada"
                android:textSize="16sp"
                android:textColor="#5A5A5A"/>

            <TextView
                android:id="@+id/tvPesoIdealResumo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                tools:text="75.00 kg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seu_gasto_calorico_diario_total"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvGastoCaloricoTotalResumo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="40dp"
                tools:text="2100 kcal/dia"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recomendacao"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvRecomendacaoConsumoResumo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:textColor="@color/black"
                tools:text="4.5L"/>


            <Button
                android:id="@+id/btnVoltarInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="12dp"
                android:text="@string/voltar_inicio" />

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/include_toolbar"
        android:id="@+id/toolbarBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>